# PRISM

./: .gitignore  LICENSE  PRISM_project_plan.md  REPHIVE_QMUL_presentation.pptx  REPHIVE_calculation_and_partial_matching.pptx  REPHIVE_presentation.pptx  REPHIVE_slide13_reworded.pptx  REPHIVE_slide5_reworded.pptx  REPHIVE_whats_next.pptx  UNDERSTANDING_PRISM.html  UNDERSTANDING_PRISM.md  pyproject.toml
.github/workflows/: publish.yml
examples/: Asgharzade-2018-GIPC3-Ahv-14_23-exomiser.parquet  Asgharzade-2018-GIPC3-Ahv-14_23.json  Cao-2018-FBN1-Patient_1-exomiser.parquet  Cao-2018-FBN1-Patient_1.json  Fregeau-2016-RERE-Subject_6-exomiser.parquet  Fregeau-2016-RERE-Subject_6.json  Giau-2018-PSEN2-proband-exomiser.parquet  Giau-2018-PSEN2-proband.json  Hall-2017-PLAA-Family_D-Case_VIII-1-exomiser.parquet  Hall-2017-PLAA-Family_D-Case_VIII-1.json  Jin-2017-FBN1-patient-exomiser.parquet  Jin-2017-FBN1-patient.json  Lalani-2016-TANGO2-Subject_2-exomiser.parquet  Lalani-2016-TANGO2-Subject_2.json  Oud-2017-EXTL3-C_II-1-exomiser.parquet  Oud-2017-EXTL3-C_II-1.json  Tadic-2017-CAPN1-Index-exomiser.parquet  Tadic-2017-CAPN1-Index.json  Takagi-2006-WNK1-Patient-exomiser.parquet  Takagi-2006-WNK1-Patient.json
src/prism/: _paths.py  cli.py  pheval_export.py  pipeline.py
src/prism/components/: age_gate.py  disambiguate.py  mechanism.py  rescore.py  (+1 more)
tests/: conftest.py  test_age_gate.py  test_disambiguate.py  test_hpoa.py  test_ingest.py  test_mechanism.py  test_models.py  test_ontology.py  test_partition.py  test_rescore.py
tests/fixtures/: hp_small.obo  phenotype_small.hpoa
(+19 files in other folders)
