[project]
name = "rephive"
version = "0.1.1"
description = "PRISM — Phenotype Re-ranking via Interpretable Semantic Matching, a post-processing layer for Exomiser"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Yasemin Bridges", email = "y.bridges@qmul.ac.uk" }
]
keywords = ["genomics", "rare disease", "phenotype", "HPO", "exomiser", "pheval", "variant prioritisation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "polars>=1.0",
    "phenopackets>=2.0.2.post5",
    "pronto>=2.0",
    "oaklib>=0.6.23",
    "pheval>=0.7.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/yaseminbridges/PRISM"
Repository = "https://github.com/yaseminbridges/PRISM"
Issues = "https://github.com/yaseminbridges/PRISM/issues"

[project.scripts]
prism = "prism.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prism"]

[tool.pytest.ini_options]
testpaths = ["tests"]
